# ocaml-xla

./: .gitignore  LICENSE  README.md  dune-project  xla.opam
.github/workflows/: workflow.yml
examples/: basics.ml  convert_llama_checkpoint.py  dune  gpt2_tokenizer.ml  gpt2_tokenizer.mli  llama.ml  load_hlo.ml  nanogpt.ml  sentencepiece_tokenizer.ml  sentencepiece_tokenizer.mli
src/config/: discover.ml
src/stubs/: bindings.ml  gen.ml
src/wrapper/: bigarray_helper.ml  bigarray_helper.mli  buffer.ml  buffer.mli  builder.ml  builder.mli  client.ml  client.mli  computation.ml  computation.mli  device.ml  device.mli  dune  element_type.ml  element_type.mli  executable.ml  executable.mli  hlo_module_proto.ml  hlo_module_proto.mli  import.ml  literal.ml  literal.mli  npy.ml  npy.mli  op.ml  op.mli  safetensors.ml  safetensors.mli  shape.ml  shape.mli  wrappers.ml  wrappers.mli  xla_stubs.cpp  xla_stubs.h
test/: dune
tests/: basics.ml  dune
