(lang dune 3.1)

(name xla)

(generate_opam_files true)

(source
 (github LaurentMazare/ocaml-xla))

(authors "Laurent Mazare")

(maintainers "Laurent Mazare <lmazare@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name xla)
 (synopsis "XLA bindings for OCaml")
 (description "OCaml bindings for XLA (Accelerated Linear Algebra), a compiler for Machine Learning.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
