(executable
 (name basics)
 (modules basics)
 (libraries xla base sexplib stdio)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_sexp_message)))

(executable
 (name nanogpt)
 (modules nanogpt)
 (libraries xla base sexplib stdio)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_sexp_message)))
