(executable
 (name basics)
 (modules basics)
 (libraries xla base sexplib stdio)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_sexp_message)))

(executable
 (name nanogpt)
 (modules gpt2_tokenizer nanogpt)
 (libraries xla base re yojson sexplib stdio uutf)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_sexp_message)))

(executable
 (name llama)
 (modules sentencepiece_tokenizer llama)
 (libraries xla base re yojson sexplib stdio uutf)
 (preprocess
  (pps ppx_inline_test ppx_expect ppx_sexp_conv ppx_sexp_message)))
