(library
  (name xla)
  (public_name xla)
  (foreign_stubs (language cxx) (names xla_stubs) (flags :standard -std=c++17 -Wno-deprecated-declarations -DLLVM_ON_UNIX=1 (:include c_flags.sexp)))
  (foreign_stubs (language c) (names xla_stubs_generated) (flags :standard  (:include c_flags.sexp)))
  (c_library_flags :standard (:include c_library_flags.sexp) -lpthread -lm -ldl)
  (libraries base bigarray ctypes ctypes.foreign ctypes.stubs stdio)
  (preprocess (pps ppx_expect ppx_sexp_conv ppx_sexp_message)))

(rule
  (targets c_flags.sexp c_library_flags.sexp)
  (deps    (:discover ../config/discover.exe))
  (action  (run %{discover})))

(rule
  (targets bindings.ml)
  (deps    ../stubs/bindings.ml)
  (action  (copy ../stubs/bindings.ml bindings.ml)))

(rule
  (targets xla_stubs_generated.c xla_generated.ml)
  (deps    (:gen ../stubs/gen.exe))
  (action  (run %{gen})))
